dom: create / remove row

--- a/index.html
+++ b/index.html
@@ -37,63 +37,7 @@
                     <th>Ação</th>
                 </tr>
             </thead>
-
-            <tbody>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/Michelle-Laignier.png" alt="Imagem de perfil de Michelle">
-                        <a href="https://github.com/Michelle-Laignier" target="_blank">
-                            <p>Michelle Laignier</p>
-                            <span>Michelle-Laignier</span>
-                        </a>
-                    </td>
-                    <td class="repositories">
-                        27
-                    </td>
-                    <td class="followers">
-                        4
-                    </td>
-                    <td>
-                        <button class="remove">Remover</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/diego3g.png" alt="Imagem de perfil de Michelle">
-                        <a href="https://github.com/diego3g" target="_blank">
-                            <p>Diego Fernandes</p>
-                            <span>diego3g</span>
-                        </a>
-                    </td>
-                    <td class="repositories">
-                        27
-                    </td>
-                    <td class="followers">
-                        4
-                    </td>
-                    <td>
-                        <button class="remove">Remover</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/maykbrito.png" alt="Imagem de perfil de Michelle">
-                        <a href="https://github.com/maykbrito" target="_blank">
-                            <p>Mayk Brito</p>
-                            <span>maykbrito</span>
-                        </a>
-                    </td>
-                    <td class="repositories">
-                        27
-                    </td>
-                    <td class="followers">
-                        4
-                    </td>
-                    <td>
-                        <button class="remove">Remover</button>
-                    </td>
-                </tr>
-            </tbody>
+            <tbody></tbody>
         </table>
     </div>
 </body>
