layout for empty table

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <script type="module" src="./js/main.js" defer></script>
 
@@ -39,6 +39,12 @@
             </thead>
             <tbody></tbody>
         </table>
+
+        <div class="empty hide">
+            <img src="./assets/star-icon.svg" alt="Imagem de estrela">
+            <p>Nenhum favorito ainda</p>
+        </div>
+
     </div>
 </body>
 </html>
